--- a/pom.xml
+++ b/pom.xml
@@ -2,6 +2,20 @@
     xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
 
+
+  <repositories>
+    <repository>
+      <id>teavm-dev</id>
+      <url>https://dl.bintray.com/konsoletyper/teavm</url>
+    </repository>
+  </repositories>
+  <pluginRepositories>
+    <pluginRepository>
+      <id>teavm-dev</id>
+      <url>https://dl.bintray.com/konsoletyper/teavm</url>
+    </pluginRepository>
+  </pluginRepositories>
+
   <groupId>org.teavm.libgdx</groupId>
   <artifactId>teavm-libgdx</artifactId>
   <version>0.1.0-SNAPSHOT</version>
@@ -10,7 +24,7 @@
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <java.version>1.8</java.version>
-    <teavm.version>0.5.1</teavm.version>
+    <teavm.version>0.6.0-dev-816</teavm.version>
     <jackson.version>2.5.0</jackson.version>
     <gdx.version>1.5.3</gdx.version>
   </properties>
