--- a/core/pom.xml
+++ b/core/pom.xml
@@ -53,5 +53,10 @@
       <artifactId>commons-io</artifactId>
       <version>2.4</version>
     </dependency>
+    <dependency>
+      <groupId>org.reflections</groupId>
+      <artifactId>reflections</artifactId>
+      <version>${reflections.version}</version>
+    </dependency>
   </dependencies>
 </project>
