--- a/pom.xml
+++ b/pom.xml
@@ -8,6 +8,14 @@
       <id>teavm-dev</id>
       <url>https://dl.bintray.com/konsoletyper/teavm</url>
     </repository>
+    <repository>
+      <snapshots>
+        <enabled>false</enabled>
+      </snapshots>
+      <id>central</id>
+      <name>bintray</name>
+      <url>http://jcenter.bintray.com</url>
+    </repository>
   </repositories>
   <pluginRepositories>
     <pluginRepository>
@@ -27,6 +35,7 @@
     <teavm.version>0.6.0-dev-816</teavm.version>
     <jackson.version>2.5.0</jackson.version>
     <gdx.version>1.9.10</gdx.version>
+    <reflections.version>0.9.11</reflections.version>
   </properties>
 
   <modules>
@@ -101,6 +110,12 @@
         <groupId>com.fasterxml.jackson.core</groupId>
         <artifactId>jackson-databind</artifactId>
         <version>${jackson.version}</version>
+      </dependency>
+
+      <dependency>
+        <groupId>org.reflections</groupId>
+        <artifactId>reflections</artifactId>
+        <version>${reflections.version}</version>
       </dependency>
     </dependencies>
   </dependencyManagement>
