--- a/demos/superjumper/pom.xml
+++ b/demos/superjumper/pom.xml
@@ -4,14 +4,14 @@
 
   <parent>
     <groupId>org.teavm.libgdx</groupId>
-    <artifactId>teavm-libgdx</artifactId>
+    <artifactId>teavm-libgdx-demos</artifactId>
     <version>0.1.0-SNAPSHOT</version>
   </parent>
-  <artifactId>teavm-libgdx-demos</artifactId>
+  <artifactId>teavm-libgdx-superjumper</artifactId>
   <packaging>pom</packaging>
 
   <modules>
-    <module>invaders</module>
-    <module>superjumper</module>
+    <module>core</module>
+    <module>webapp</module>
   </modules>
 </project>
