--- a/pom.xml
+++ b/pom.xml
@@ -36,6 +36,7 @@
     <jackson.version>2.5.0</jackson.version>
     <gdx.version>1.9.10</gdx.version>
     <reflections.version>0.9.11</reflections.version>
+    <kotlin.version>1.3.41</kotlin.version>
   </properties>
 
   <modules>
@@ -93,6 +94,17 @@
         <groupId>com.badlogicgames.gdx</groupId>
         <artifactId>gdx-controllers-gwt</artifactId>
         <version>${gdx.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>com.badlogicgames.gdx</groupId>
+        <artifactId>gdx-backend-lwjgl</artifactId>
+        <version>${gdx.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>com.badlogicgames.gdx</groupId>
+        <artifactId>gdx-platform</artifactId>
+        <version>${gdx.version}</version>
+        <classifier>natives-desktop</classifier>
       </dependency>
 
       <!-- Jackson -->
