--- a/demos/superjumper/pom.xml
+++ b/demos/superjumper/pom.xml
@@ -10,9 +10,31 @@
   <artifactId>teavm-libgdx-superjumper</artifactId>
   <packaging>pom</packaging>
 
-  <modules>
-    <module>core</module>
-    <module>desktop</module>
-    <module>webapp</module>
-  </modules>
+  <profiles>
+    <profile>
+      <id>all-platforms</id>
+      <modules>
+        <module>core</module>
+        <module>desktop</module>
+        <module>webapp</module>
+      </modules>
+      <activation>
+        <activeByDefault>true</activeByDefault>
+      </activation>
+    </profile>
+    <profile>
+      <id>desktop</id>
+      <modules>
+        <module>core</module>
+        <module>desktop</module>
+      </modules>
+    </profile>
+    <profile>
+      <id>webapp</id>
+      <modules>
+        <module>core</module>
+        <module>webapp</module>
+      </modules>
+    </profile>
+  </profiles>
 </project>
