--- a/pom.xml
+++ b/pom.xml
@@ -97,6 +97,17 @@
       </dependency>
       <dependency>
         <groupId>com.badlogicgames.gdx</groupId>
+        <artifactId>gdx-controllers-desktop</artifactId>
+        <version>${gdx.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>com.badlogicgames.gdx</groupId>
+        <artifactId>gdx-controllers-platform</artifactId>
+        <version>${gdx.version}</version>
+        <classifier>natives-desktop</classifier>
+      </dependency>
+      <dependency>
+        <groupId>com.badlogicgames.gdx</groupId>
         <artifactId>gdx-backend-lwjgl</artifactId>
         <version>${gdx.version}</version>
       </dependency>
